methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:20: error: not found: value avcolor
  avcolor();
  ^