methods.basics.MethodsDogHouse.scala.code
def dogHouse()
{
  
  brushDown();
  forward();
  brushUp();
}


while(getX()!=1) 
{
 
  dogHouse();
}

left();

while(getX()!=4) 
{
  avcolor();
}
